Latest Stable Version with commentary

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1>Calculateur d'empreinte carbone</h1>
+    <h1>Calculateur de taux d'emprunt en fonction de l'empreinte carbone</h1>
     <div class="form-container">
         <form method="post" class="">
             <label for="voiture">Type de voiture :</label>
